# ngx

./: .commitlintrc.ts  .env.release.sample  .eslintrc.json  .gitignore  .lintstagedrc.json  .npmrc  .part.prettierignore  .prettierignore  .releaserc.js  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  actionlint.sh  angular.json  api-extractor.json  codecov.yml  dts-config.js  eslint.config.js  eslint.config.mjs  instrument-for-coverage.sh  jest.config.js  jest.config.json  jest.config.ts  knip.jsonc  package-lock.json  package.json  pnpm-lock.yaml  postbuild.sh  renovate.json5  rollup.config.mjs  semantic-release-local.sh  tsconfig.json
projects/ngx-meta/docs/: .eslintrc.json  .gitignore  Makefile  README.md  mkdocs.yml  package.json  pnpm-lock.yaml  prebuild.sh  pyproject.toml
projects/ngx-meta/docs/content/: changelog.md  features.md  get-started.md  index.md  todo.md
projects/ngx-meta/docs/content/built-in-modules/: index.md  json-ld.md  open-graph.md  standard.md  twitter-cards.md
projects/ngx-meta/docs/content/guides/: custom-metadata-providers-selection.md  defaults.md  global-and-module-metadata.md  late-loading-modules.md  manage-your-custom-metadata.md  manual-setup.md  metadata-values-json.md  set-metadata-using-routing.md  set-metadata-using-service.md  title-formatting.md  url-resolution.md
projects/ngx-meta/docs/content/misc/: bundle-size.md  (+4 more)
projects/ngx-meta/docs/includes/: a16-app-module.md  a17-app-config.md  abbreviations.md  common-links.md  example-module-based-app-module.md  example-standalone-app-config.md  module-apps-explanation.md  ngx-meta-elements-service.md  ngx-meta-meta.md  routing-usage.md  sample-module-based-app-module.md  sample-standalone-app-config.md  service-usage.md  standalone-apps-explanation.md  title-description-global.md
(+1277 files in other folders)
