[tool.poetry]
name = "ngx-meta-docs"
version = "0.0.0"
description = "@davidlj95/ngx-meta NPM/JS library docs"
authors = ["David LJ <mail@davidlj95.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.13.7"
mkdocs-autolinks-plugin = "0.7.1"

[tool.poetry.group.dev.dependencies]
mkdocs-material = {extras = ["imaging"], version = "9.6.18"}
mkdocs-git-revision-date-localized-plugin = "1.4.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
