[tool.poetry]
name = "ngx-meta-docs"
version = "0.0.0"
description = "@davidlj95/ngx-meta NPM/JS library docs"
authors = ["David LJ <mail@davidlj95.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "==3.14.2"
mkdocs-autolinks-plugin = "0.7.1"

[tool.poetry.group.dev.dependencies]
mkdocs-material = {extras = ["imaging"], version = "9.7.1"}
mkdocs-git-revision-date-localized-plugin = "1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
